--- a/about/index.html
+++ b/about/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wortle - Deutsche Wordle Variante</title>
+    <meta name="description" content="Wortle is die deutsche Variante zum populären Wortspiel." />
   </head>
   <body>
     <div id="app"><!-- app-content --></div>
