add theme color

--- a/about/index.html
+++ b/about/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wortle - Deutsche Wordle Variante</title>
     <meta name="description" content="Wortle is die deutsche Variante zum populären Wortspiel." />
+    <meta name="theme-color" content="#fbbf24" />
   </head>
   <body>
     <div id="app"><!-- app-content --></div>
