add meta tags for social sharing info

--- a/about/index.html
+++ b/about/index.html
@@ -7,6 +7,27 @@
     <title>Wortle - Deutsche Wordle Variante</title>
     <meta name="description" content="Wortle is die deutsche Variante zum populären Wortspiel." />
     <meta name="theme-color" content="#fbbf24" />
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://wortle.schmonz.club/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Wortle - Deutsche Wordle Variante" />
+    <meta
+      property="og:description"
+      content="Wortle is die deutsche Variante zum populären Wortspiel."
+    />
+    <meta property="og:image" content="https://wortle.schmonz.club/social.png" />
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:domain" content="wortle.schmonz.club" />
+    <meta property="twitter:url" content="https://wortle.schmonz.club/" />
+    <meta name="twitter:title" content="Wortle - Deutsche Wordle Variante" />
+    <meta
+      name="twitter:description"
+      content="Wortle is die deutsche Variante zum populären Wortspiel."
+    />
+    <meta name="twitter:image" content="https://wortle.schmonz.club/social.png" />
   </head>
   <body>
     <div id="app"><!-- app-content --></div>
