--- a/index.html
+++ b/index.html
@@ -6,6 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#fbbf24" />
     <title>Wortle</title>
+    <meta name="description" content="Die deutsche Variante des populären Wortspiels" />
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://wortle.schmonz.club/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Wortle" />
+    <meta property="og:description" content="Die deutsche Variante des populären Wortspiels" />
+    <meta property="og:image" content="https://wortle.schmonz.club/social.png" />
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:domain" content="wortle.schmonz.club" />
+    <meta property="twitter:url" content="https://wortle.schmonz.club/" />
+    <meta name="twitter:title" content="Wortle" />
+    <meta name="twitter:description" content="Die deutsche Variante des populären Wortspiels" />
+    <meta name="twitter:image" content="https://wortle.schmonz.club/social.png" />
   </head>
   <body>
     <div id="app"></div>
