improve meta description and title

--- a/about/index.html
+++ b/about/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Wortle - Deutsche Wordle Variante</title>
+    <title>Wortle - Deutsche Wordle Variante - About</title>
     <meta name="description" content="Wortle is die deutsche Variante zum populären Wortspiel." />
     <meta name="theme-color" content="#fbbf24" />
 
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="https://wortle.schmonz.club/" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Wortle - Deutsche Wordle Variante" />
+    <meta property="og:title" content="Wortle - Deutsche Wordle Variante - About" />
     <meta
       property="og:description"
       content="Wortle is die deutsche Variante zum populären Wortspiel."
@@ -22,7 +22,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta property="twitter:domain" content="wortle.schmonz.club" />
     <meta property="twitter:url" content="https://wortle.schmonz.club/" />
-    <meta name="twitter:title" content="Wortle - Deutsche Wordle Variante" />
+    <meta name="twitter:title" content="Wortle - Deutsche Wordle Variante - About" />
     <meta
       name="twitter:description"
       content="Wortle is die deutsche Variante zum populären Wortspiel."
